<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="derpquest_title">DerpQuest</string>
    <string name="derp_title">DerpFest Settings</string>
    <string name="navigation_actions_title">Actions</string>
    <string name="navigation_interface_title">Interface</string>
    <string name="navigation_statusbar_title">Statusbar</string>
    <string name="navigation_lockscreen_title">Lockscreen</string>
    <string name="navigation_system_title">System/Misc</string>
    <string name="accessibility_description">Screen menu</string>
    <string name="accessibility_item_description">%1$s menu item</string>
    <string name="powerbutton_title">Power button</string>
    <string name="powerbutton_summary">Configure additional options &amp; actions</string>
    <string name="navigationbar_title">Navigation</string>
    <string name="navigationbar_summary">Configure system navigation options</string>
    <string name="gesture_options_title">Gestures</string>
    <string name="gesture_options_summary">Enable/disable device specific user actions</string>
    <string name="volume_rocker_title">Volume rocker</string>
    <string name="volume_rocker_summary">Set default behavior and actions for vol +/- keys</string>
    <string name="hw_keys_title">Hardware keys</string>
    <string name="hw_keys_summary">Assign actions for physical navigation buttons</string>
    <string name="quick_settings_title">Quick settings</string>
    <string name="quick_settings_summary">Customize the overall view &amp; functionality</string>
    <string name="headsup_title">Heads-up</string>
    <string name="headsup_summary">Configure Heads-up options</string>
    <string name="themer_title">Themer</string>
    <string name="themer_summary">Browse and select installed themes</string>
    <string name="battery_options_title">Battery options</string>
    <string name="battery_options_summary">Customize how battery is displayed</string>
    <string name="clock_options_title">Clock options</string>
    <string name="clock_options_summary">Set view options of time &amp; date in statusbar</string>
    <string name="traffic_title">Network indicator</string>
    <string name="traffic_summary">Enable &amp; configure network indicator in statusbar</string>
    <string name="status_bar_items_title">Statusbar items</string>
    <string name="status_bar_items_summary">Configure statusbar indicators</string>
    <string name="lockscreen_aosp_title">Native controls</string>
    <string name="lockscreen_aosp_summary">Configure AOSP options for lockscreen &amp; ambient display</string>
    <string name="lockscreen_general_title">General options</string>
    <string name="lockscreen_general_summary">Add or remove visual elements of your lockscreen</string>
    <string name="lockscreen_tuner_title">Lockscreen tuner</string>
    <string name="lockscreen_tuner_summary">Add or remove tuner parts of your lockscreen</string>
    <string name="lockscreen_weather_title2">Weather options</string>
    <string name="lockscreen_weather_summary2">Configure lockscreen weather</string>
    <string name="lockscreen_smart_media_title">Smart Media options</string>
    <string name="lockscreen_smart_media_summary">Configure lockscreen Smart Media</string>
    <string name="animations_category_title">Animations</string>
    <string name="animations_category_summary">Set custom animations for certain transitions</string>
    <string name="general_notifications_title">General notifications</string>
    <string name="general_notifications_summary">Miscellaneous notification controls</string>
    <string name="miscellaneous_title">Miscellaneous</string>
    <string name="miscellaneous_summary">Uncategorized options</string>
    <string name="changelog_title">Changelog</string>
    <string name="changelog_summary">List of recent commits added to DerpFest</string>
    <string name="led_settings_title">LED settings</string>
    <string name="led_settings_summary">Configure the LED light for supported options</string>
    <string name="empty_category_title">No extra features yet...</string>
    <string name="empty_category_description">However, new features may be added here soon. Check back after future updates!</string>
    <string name="dummy_string"> </string>
    <string name="active_edge_title">Active Edge</string>
    <string name="ambient_music_display">Music ticker</string>
    <string name="aware_settings_title">Motion Sense</string>
    <string name="battery_style_statusbar">Statusbar battery</string>
    <string name="battery_style_qs">Quick panel battery</string>
    <string name="brightness_control_category">Brightness control</string>
    <string name="custom_header_title">Custom header</string>
    <string name="led_notifications_title">LED notifications</string>
    <string name="led_battery_title">Battery LED</string>
    <string name="qs_panel_layout_category">QS panel layout</string>
    <string name="smart_pixels_title">Smart Pixels</string>
    <string name="volume_steps_title">Volume steps</string>
    <string name="power_menu_category">Power menu</string>
    <string name="pulse_settings">Pulse</string>
    <string name="gestures_buttons_category">BUTTONS</string>
    <string name="gestures_motions_category">MOTIONS</string>
    <string name="derp_about_title">About DerpFest</string>
    <string name="derp_about_summary">A little info about the team</string>
    <string name="derp_telegram_title">DerpFest Telegram Community</string>
    <string name="derp_telegram_summary">Tap here to open our wonderful community!</string>
    <string name="derp_github_title">DerpFest GitHub</string>
    <string name="derp_github_summary">Tap here to open our Github!</string>
    <string name="derp_about_info_summary">This is a small project based on AOSP. We try to be a platform for beginners and support the Custom ROM community with our own unique contributions as well. This ROM exists thanks to inspiration of AOSiP, Thank you!</string>
    <string name="derp_about_team">DerpFest Team</string>
    <string name="derp_about_alex" translatable="false">Alexander Brunswig</string>
    <string name="derp_about_alex_summary" translatable="false">Founder</string>
    <string name="derp_about_david" translatable="false">David Setiawan</string>
    <string name="derp_about_david_summary" translatable="false">QA</string>
    <string name="derp_version">DerpFest version</string>
    <string name="derp_version_default">Unknown</string>
    <string name="advanced_behavior_title">Advanced behavior</string>
    <string name="appearance_category">APPEARANCE</string>
    <string name="behavior_category">BEHAVIOR</string>
    <string name="enable_first">Please enable first</string>
    <string name="systemui_restart_title">SystemUI restart required</string>
    <string name="systemui_restart_message">For all changes to take effect, a SystemUI restart is required. Restart SystemUI now?</string>
    <string name="navbar_gestures_title">Navigation gesture options</string>
    <string name="navbar_gestures_summary">Choose buttons or gestures to navigate your device</string>
    <string name="lockscreen_battery_info_title">Lockscreen charging info</string>
    <string name="lockscreen_battery_info_summary">Display negotiated charger max current, voltage, wattage and battery temperature on lockscreen while charging</string>
    <string name="network_traffic_state_title">Enable network monitor</string>
    <string name="network_traffic_state_sb_title">Always show net monitor</string>
    <string name="network_traffic_state_summary">Show net download activity, or upload if bigger, in expanded statusbar</string>
    <string name="network_traffic_state_sb_summary">Keep showing net activity also in normal statusbar</string>
    <string name="network_traffic_autohide_threshold_title">Net activity autohide threshold (KB/s)</string>
    <string name="statusbar_items_title">Statusbar items</string>
    <string name="status_bar_icons_title">Status bar icons</string>
    <string name="status_bar_system_icons_title">System icons</string>
    <string name="status_bar_system_icons_summary">Control which status bar icons are shown</string>
    <string name="incall_vibration_category">In-call vibration options</string>
    <string name="incall_vibrate_connect_title">Vibrate on connect</string>
    <string name="incall_vibrate_call_wait_title">Vibrate on call waiting</string>
    <string name="incall_vibrate_disconnect_title">Vibrate on disconnect</string>
    <string name="three_finger_gesture">Swipe to screenshot</string>
    <string name="three_finger_gesture_summary">Swipe three fingers to take screenshot</string>
    <string name="lockscreen_media_art_title">Lockscreen media art</string>
    <string name="lockscreen_media_art_summary">Display media cover art when playing music</string>
    <string name="lockscreen_media_blur_title">Media art blur level</string>
    <string name="show_lockscreen_media_art_title">Show media art</string>
    <string name="lockscreen_media_art_options_title">Lockscreen media art</string>
    <string name="pulse_ambient_light_category">Screen edge lighting</string>
    <string name="pulse_ambient_light_title">Show on new notifcation</string>
    <string name="pulse_ambient_light_summary">Show light pulse on new notification</string>
    <string name="ambient_notification_light_enabled_title">Show on always on</string>
    <string name="aod_disabled">AOD is disabled</string>
    <string name="ambient_notification_light_enabled_summary">Show light pulse on new notification using always on</string>
    <string name="ambient_notification_light_color_title">Custom color</string>
    <string name="ambient_notification_light_color_summary">Default color for light pulse</string>
    <string name="ambient_notification_light_hide_aod_title">Only show light pulse</string>
    <string name="ambient_notification_light_hide_aod_summary">Hide all other display elements from always on</string>
    <string name="ambient_notification_light_timeout_title">Timeout for light pulse</string>
    <string name="entry_infinite">Infinite</string>
    <string name="entry_five_minute">5 minutes</string>
    <string name="entry_ten_minute">10 minutes</string>
    <string name="entry_thirty_minute">30 minutes</string>
    <string name="entry_sixty_minute">60 minutes</string>
    <string name="entry_fifteen_minute">15 minutes</string>
    <string name="ambient_notification_light_color_mode_title">Light pulse color</string>
    <string name="synth_smart_media_title">Synth Smart Media</string>
    <string name="synth_smart_media_summary">Enable a Media Player on Lockscreen like Samsung One UI</string>
    <string name="smart_media_artwork_blur_category_title">Artwork Blur</string>
    <string name="smart_media_artwork_blur_title">Artwork Blur</string>
    <string name="smart_media_artwork_blur_summary">Display artwork media with blur</string>
    <string name="smart_media_artwork_blur_radius_title">Artwork Blur Radius</string>
    <string name="smart_media_font_title">Smart Media Fonts</string>
    <string name="smart_media_title_font_title">Title song font</string>
    <string name="smart_media_title_font_summary">Change the default font of the title song</string>
    <string name="smart_media_title_font_dialog_title">Select a title song font</string>
    <string name="smart_media_artist_font_title">Artist name font</string>
    <string name="smart_media_artist_font_summary">Change the default font of the artist name</string>
    <string name="smart_media_artist_font_dialog_title">Select a artist name font</string>
    <string name="smart_media_auto_functions_title">Automatic Functions</string>
    <string name="smart_media_auto_show_title">Auto show (0 to disable)</string>
    <string name="smart_media_auto_hide_title">Auto hide (0 to disable)</string>
</resources>